<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.seunghyun.linememo.ui.edit.EditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="16dp"
            android:text="@={vm.title}"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="@{vm.isEditing}"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@={vm.title}"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="@{!vm.isEditing}"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/contentEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:fadeScrollbars="false"
            android:gravity="top"
            android:hint="@string/content"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            android:text="@={vm.content}"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:visibility="@{vm.isEditing}"
            app:layout_constraintBottom_toTopOf="@id/pictureText"
            app:layout_constraintTop_toBottomOf="@id/titleEditText" />

        <TextView
            android:id="@+id/contentText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fadeScrollbars="false"
            android:gravity="top"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            android:text="@={vm.content}"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:visibility="@{!vm.isEditing}"
            app:layout_constraintBottom_toTopOf="@id/pictureText"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/pictureText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/picture"
            app:layout_constraintBottom_toTopOf="@id/imagesRecyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contentEditText" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/dividerColor"
            app:layout_constraintBottom_toBottomOf="@id/pictureText"
            app:layout_constraintEnd_toStartOf="@id/addImageButton"
            app:layout_constraintStart_toEndOf="@id/pictureText"
            app:layout_constraintTop_toTopOf="@id/pictureText" />

        <TextView
            android:id="@+id/addImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_add_black_24dp"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/add_images"
            android:textColor="?android:attr/textColorPrimary"
            android:visibility="@{vm.isEditing ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/pictureText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/pictureText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imagesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingStart="@dimen/space_between_images"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="horizontal"
            app:items="@{vm.imageItems}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintTop_toBottomOf="@id/pictureText"
            tools:ignore="RtlSymmetry"
            tools:listitem="@layout/item_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
