<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/editButton"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/edit"
        app:showAsAction="ifRoom"
        tools:ignore="PrivateResource" />

    <item
        android:id="@+id/saveButton"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/save"
        app:showAsAction="always" />

    <item
        android:id="@+id/deleteButton"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>