<resources>
    <string name="app_name">메모</string>

    <string name="write_memo">메모 작성하기</string>
    <string name="add_images">사진 추가하기</string>

    <string name="title">제목</string>
    <string name="content">내용</string>
    <string name="picture">사진</string>
    <string name="camera">카메라</string>
    <string name="album">앨범</string>
    <string name="link">링크</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="save">저장</string>
    <string name="dont_save">저장 안 항</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>

    <string name="no_memos">작성한 메모가 없어요.\n아래 + 버튼을 눌러서 메모를 작성해보세요 :)</string>
    <string name="image_loading_failed">이미지를 불러오는 데 실패했습니다.</string>
    <string name="enter_title">제목을 입력해주세요.</string>
    <string name="empty_content">내용이 없습니다.</string>
    <string name="saved">저장되었습니다.</string>
    <string name="deleted">삭제되었습니다.</string>
    <string name="type_link">추가할 링크를 입력해주세요</string>
    <string name="link_prefix">https://</string>
    <string name="save_question">변경사항을 저장할까요?</string>
</resources>
